# nexus

./: DISCORD.md  NEXUS_BOT_ENV.md  NEXUS_DISCORD_BOT.md  NEXUS_SERVER_SETUP.md  main.py  nexus_bot.env  nexus_bot_standalone.py  pyproject.toml  requirements.txt  run_bot.py  run_website.py  vercel.json
api/: index.py
discord_bot/: bot.py  config.py
discord_bot/cogs/: info.py  logging.py  moderation.py  notifications.py  owner.py  server_setup.py
discord_bot/utils/: api_client.py  embed_builder.py
website/: Dockerfile
website/backend/: admin_dashboard.py  app.py  blog_data.py  bot_blog_data.py  bot_dashboard.py  bot_manager.py  changelog_data.py  models.py  requirements.txt  setup.py
website/frontend/static/css/: style.css
website/frontend/static/js/: main.js
website/frontend/templates/: 404.html  500.html  about.html  blog.html  blog_post.html  changelog.html  channel-settings.html  channel.html  community.html  contact.html  dashboard.html  faq.html  github.html  help.html  index.html  maintenance.html  privacy.html  settings.html  setup_wizard.html  status.html  terms.html  videos.html
website/frontend/templates/admin/: analytics.html  assign_admin.html  base.html  blog_form.html  blogs.html  bot_status.html  changelog.html  channel_detail.html  channels.html  dashboard.html  messages.html  mod_logs.html  project_export.html  server_detail.html  servers.html  settings.html  system.html  user_detail.html  users.html
website/frontend/templates/auth/: login.html  signup.html
website/frontend/templates/bot/: access_denied.html  account.html  base.html  blog.html  blog_post.html  contact.html  dashboard.html  help.html  login.html  (+6 more)
(+3 files in other folders)
